# flowbow

./: .gitignore  .pre-commit-config.yaml  README.md  ccds-help.json  ccds.json  cookiecutter.json  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
docs/: learnings.md
docs/docs/: all-options.md
docs/scripts/: generate-termynal.py
flowbow/: __main__.py  monkey_patch.py
hooks/: post_gen_project.py
src/flowbow/: cli.py  generator.py  main.py
src/flowbow/templates/: python_class_template.py
src/flowbow/templates/no-artifact-no-flows/: .gitignore
src/flowbow/templates/no-artifact-no-flows/module_name/: config.py  data.py  features.py  metrics.py  models.py  predict.py  train.py.j2
src/flowbow/templates/no-artifact-no-flows/notebooks/: 00-explore.ipynb  01-training.ipynb  02-inference.ipynb  03-viz-runs.ipynb
tests/: conda_harness.sh  conftest.py  pipenv_harness.sh  virtualenv_harness.sh
{{ cookiecutter.repo_name }}/: .gitignore  LICENSE  README.md  init.sh  main.py  pyproject.toml
{{ cookiecutter.repo_name }}/docs/mkdocs/docs/: index.md
{{ cookiecutter.repo_name }}/notebooks/: 01-training.ipynb
{{ cookiecutter.repo_name }}/{{ cookiecutter.module_name }}/: config.py  dataset.py  features.py  models.py  predict.py  train.py  utils.py
