[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "flowbow"

[project]
name = "flowbow"
version = "0.0.1"
description = "Kickstart ML projects with configurable and powerful boilerplate code generator CLI"
authors = [
    { name = "Himanshu Mittal", email = "himanshu.mittal.dev@gmail.com" }
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3"
]
requires-python = ">=3.10"

[project.scripts]
flowbow = "flowbow.__main__:main"

[tool.ruff]
line-length = 80
