[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = {{ cookiecutter.module_name|tojson }}
version = "0.0.1"
description = {{ cookiecutter.description|tojson }}
authors = [
  { name = {{ cookiecutter.author_name|tojson }} },
]
{% if cookiecutter.open_source_license != 'No license file' %}license = { file = "LICENSE" }{% endif %}
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    {% if cookiecutter.open_source_license == 'MIT License' %}"License :: OSI Approved :: MIT License"{% elif cookiecutter.open_source_license == 'Modified BSD License' %}"License :: OSI Approved :: BSD License"{% elif cookiecutter.open_source_license == 'ISC license' -%}License :: OSI Approved :: ISC License (ISCL){% elif cookiecutter.open_source_license == 'Apache Software License 2.0' -%}License :: OSI Approved :: Apache Software License{% elif cookiecutter.open_source_license == 'GNU General Public License v3' -%}License :: OSI Approved :: GNU General Public License v3 (GPLv3){% endif %}
]
requires-python = "~={{ cookiecutter.python_version_number }}"

[tool.ruff]
line-length = 80
